reduce lenght of question

--- a/simulate_cases/finalsize_susceptibility_matrices.qmd
+++ b/simulate_cases/finalsize_susceptibility_matrices.qmd
@@ -1,5 +1,5 @@
 ---
-title: "How to create the susceptibility matrices for a scenario where the susceptibility varies between and within groups?"
+title: "How to create heterogeneous susceptibility matrices?"
 format: 
   html:
     code-link: true
