--- a/quantify_transmission/finalsize_effective_reproduction_number.qmd
+++ b/quantify_transmission/finalsize_effective_reproduction_number.qmd
@@ -1,5 +1,5 @@
 ---
-title: "How to simulate the effective reproductive number accounting for heterogeneous social contact and homogeneous susceptibility in all age groups?"
+title: "How to simulate the effective reproductive number (R~eff~) accounting for heterogeneous social contact?"
 format: 
   html:
     code-link: true
@@ -10,6 +10,11 @@ date: last-modified
 toc: true
 toc_float: true
 ---
+
+Conditions:
+
+- Account for heterogeneous social contact
+- Account for homogeneous susceptibility in all age groups
 
 ```{r}
 library(finalsize)
