--- a/quantify_transmission/reproduction_number_basic_epiestim_parametric.qmd
+++ b/quantify_transmission/reproduction_number_basic_epiestim_parametric.qmd
@@ -1,5 +1,5 @@
 ---
-title: "How to quantify the time-varying reproduction number (Rt) of the outbreak?"
+title: "How to quantify the time-varying reproduction number (R~t~)?"
 format: 
   html:
     code-link: true
@@ -12,12 +12,11 @@ toc_float: true
 ---
 
 Conditions:
+
 - Use the first list element from the Simulated Ebola outbreak ebola_sim_clean object from the outbreaks R package. The name of the first element is linelist.
 - Use the "date of onset" column to calculate the weekly growth rate. 
 - Use the serial interval distribution parameters of Ebola Virus Disease estimated from the WHO Ebola Response Team in 2015 to quantify the time-varying reproduction number.
 - Assume a known mean and standard deviation values of the serial interval distribution to quantify the time-varying reproduction number.
-
-### A3
 
 ```{r}
 #| warning: false
