--- a/quantify_transmission/reproduction_number_basic_epiestim_parametric.qmd
+++ b/quantify_transmission/reproduction_number_basic_epiestim_parametric.qmd
@@ -13,8 +13,8 @@ toc_float: true
 
 Conditions:
 
-- Use the first list element from the Simulated Ebola outbreak ebola_sim_clean object from the outbreaks R package. The name of the first element is linelist.
-- Use the "date of onset" column to calculate the weekly growth rate. 
+- Use the linelist from the Simulated Ebola outbreak ebola_sim_clean object from the `{outbreaks}` R package.
+- Use the `date of onset` column to calculate the weekly growth rate. 
 - Use the serial interval distribution parameters of Ebola Virus Disease estimated from the WHO Ebola Response Team in 2015 to quantify the time-varying reproduction number.
 - Assume a known mean and standard deviation values of the serial interval distribution to quantify the time-varying reproduction number.
 
