--- a/describe_cases/growth_rate_week_i2extras.qmd
+++ b/describe_cases/growth_rate_week_i2extras.qmd
@@ -13,9 +13,10 @@ toc_float: true
 
 Conditions: 
 
-- Calculate the weekly growth rate.
-- Use the date of onset of symptoms.
-- Keep the first 20 weeks as period of analysis.
+- Calculate the weekly growth rate from data collected per day.
+- Use the `linelist` object in the `ebola_sim_clean` list from the `{outbreaks}` R package. `linelist` is an outbreak data set. 
+- Use the `date_of _onset` column of `linelist` to calculate the weekly growth rate. 
+- Keep the first 20 weeks in `linelist` as period of analysis.
 
 ```{r}
 #| warning: false
@@ -34,16 +35,20 @@ data(ebola_sim_clean)
 # Extract the first element of the list
 linelist <- ebola_sim_clean$linelist
 
-# Convert the data to an incidence2 object
-incidence2_data <- 
+# Get an incidence2 object with case counts per week
+# from data collected per day
+incidence2_week <- 
   incidence2::incidence(
     x = linelist, 
     date_index = "date_of_onset",
     interval = "week"
   )
 
+# Read case counts per week
+incidence2_week
+
 # Filter the dataset to keep the first 20 weeks. 
-incidence2_filter <- incidence2_data[1:20,]
+incidence2_filter <- incidence2_week[1:20,]
 
 # Model the incidence
 incidence2_fit <- 
