--- a/describe_cases/epiparameter_extract_epiparam.qmd
+++ b/describe_cases/epiparameter_extract_epiparam.qmd
@@ -11,9 +11,11 @@ toc: true
 toc_float: true
 ---
 
-Conditions:
+## Ingredients
 
 - Use the distribution estimated from the WHO Ebola Response Team in 2015.
+
+## Steps in code
 
 ```{r}
 #| warning: false
