--- a/describe_cases/growth_rate_week_i2extras.qmd
+++ b/describe_cases/growth_rate_week_i2extras.qmd
@@ -11,12 +11,14 @@ toc: true
 toc_float: true
 ---
 
-Conditions: 
+## Ingredients
 
-- Calculate the weekly growth rate from data collected per day.
+- Calculate the weekly growth rate from daily collected data.
 - Use the `linelist` object in the `ebola_sim_clean` list from the `{outbreaks}` R package. `linelist` is an outbreak data set. 
-- Use the `date_of _onset` column of `linelist` to calculate the weekly growth rate. 
+- Use the `date_of _onset` column of `linelist` to calculate the case counts. 
 - Keep the first 20 weeks in `linelist` as period of analysis.
+
+## Steps in code
 
 ```{r}
 #| warning: false
@@ -67,6 +69,8 @@ plot(incidence2_fit, ci = FALSE, pi = TRUE)
 # Read plot documentation for an incidence2_fit object
 # ?plot.incidence2_fit
 ```
+
+## Steps in detail
 
 - The `outbreaks` package is loaded to access the simulated Ebola outbreak data.
 - The `ebola_sim_clean` object from the package contains the simulated outbreak data.
